# neurogolf-2026

./: .gitignore  Makefile  README.md  agent.md  pyproject.toml  requirements.txt  results.csv  safe_submission_report.csv  safe_submission_report_baseline_replay.csv  safe_submission_report_baseline_replay23.csv  safe_submission_report_candidate_bbox3.csv  safe_submission_report_candidate_bbox3_risky.csv  safe_submission_report_candidate_count2.csv  safe_submission_report_candidate_flip177.csv  safe_submission_report_candidate_flip177_risky.csv  safe_submission_report_candidate_plus249.csv  safe_submission_report_candidate_plus249_263tt.csv  safe_submission_report_candidate_plus249_263tt_v2.csv  safe_submission_report_candidate_plus249_v2.csv  safe_submission_report_candidate_plus263tt_only_v2.csv  safe_submission_report_candidate_plus6.csv  safe_submission_report_candidate_plus8_tt.csv  safe_submission_report_cons_A.csv  safe_submission_report_cons_A1.csv  safe_submission_report_cons_A2.csv  safe_submission_report_cons_A2a.csv  safe_submission_report_cons_A2b.csv  safe_submission_report_cons_B.csv  safe_submission_report_cons_B1.csv  safe_submission_report_cons_B2.csv  safe_submission_report_cons_B2a.csv  safe_submission_report_cons_B2b.csv  safe_submission_report_cons_no087.csv  safe_submission_report_cons_no087_135.csv  safe_submission_report_cons_no248.csv  safe_submission_report_cons_no248_258_273.csv  safe_submission_report_cons_no248_273.csv  safe_submission_report_cons_no258.csv  safe_submission_report_cons_no273.csv  safe_submission_report_conservative.csv  (+28 more)
(+88 files in other folders)
